--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
+    "http-errors": "^1.6.3",
     "mongoose": "^5.0.17",
     "uuid": "^3.2.1",
     "winston": "^3.0.0-rc5"
