put route passing tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![cf](https://i.imgur.com/7v5ASc8.png) 11: Single Resource Express API ======",
   "main": "index.js",
   "scripts": {
-    "test": "eslint . && jest --coverage --forceExit",
+    "test": "eslint . && jest --coverage --forceExit --runInBand",
     "lint": "eslint .",
     "dbon": "mkdir -p ./db && mongod --dbpath ./db",
     "dboff": "killall mongod"
